tests/baselines/reference/baseTypePrivateMemberClash.errors.txt
==== tests/cases/compiler/baseTypePrivateMemberClash.ts (1 errors) ====
    class X {
        private m: number;
    }
    class Y {
        private m: string;
    }
    
    interface Z extends X, Y { }
              ~
!!! baseTypePrivateMemberClash.ts(8,11): error TS2189: Interface 'Z' cannot simultaneously extend types 'X' and 'Y':
!!! Named properties 'm' of types 'X' and 'Y' are not identical.